fix location list on mobile

--- a/assets/scss/page/_category-landing.scss
+++ b/assets/scss/page/_category-landing.scss
@@ -426,6 +426,10 @@
                         font-size: 14px;
                         line-height: 22px;
                         margin-bottom: 16px;
+
+                        @include respond(mobile) {
+                            margin-bottom: 24px;
+                        }
                     }
                 }
             }
